--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Bottom_navigation_view"
+        android:theme="@style/Theme.kenroku_app"
         tools:targetApi="31">
         <meta-data
         android:name="com.google.android.geo.API_KEY"
